chain-tech/exchange-web-app/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: exchange
  namespace: exchange
spec:
  selector:
    deployment: exchange
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
