chain-tech/exchange-web-app/deploy/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: exchange-vs
  namespace: exchange
spec:
  hosts:
    - exchange-staging.aptan.cloud
  gateways:
    - istio-system/gateway
  http:
    - route:
        - destination:
            host: exchange.exchange.svc.cluster.local
            port:
              number: 8080
